# syscall-identification

./: .gitignore  CMakeLists.txt  Makefile  README.md  Syscall.cpp  instruction_parser.cpp  main.cpp  syscall_identification.h  syscall_identification.hpp  syscall_lookup.hpp  utils.cpp
